<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--
    Constant
    -->
    <string name="app_name">Sudoku Endless</string>

    <string name="minus_key">-</string>
    <string name="colon_key">:</string>
    <string name="hash_key">#</string>

    <string name="red_abbr">R</string>
    <string name="green_abbr">G</string>
    <string name="blue_abbr">B</string>
    <string name="alpha_abbr">A</string>

    <string name="numeric_1">1</string>
    <string name="numeric_2">2</string>
    <string name="numeric_3">3</string>
    <string name="numeric_4">4</string>
    <string name="numeric_5">5</string>
    <string name="numeric_6">6</string>
    <string name="numeric_7">7</string>
    <string name="numeric_8">8</string>
    <string name="numeric_9">9</string>

    <!--
    Multi-language
    -->
    <string name="processing">Processing......</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="basics">Basics</string>
    <string name="color_palettes">Color Palettes</string>
    <string name="advanced">Advanced</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="executable_path">Executable path</string>
    <string name="profile_path">Profile path</string>
    <string name="rating">Rating</string>

    <string name="puzzle_storage">Puzzle Storage</string>
    <string name="import_puzzle">Import Puzzle</string>
    <string name="share">Share</string>
    <string name="select_all">Select All</string>
    <string name="discard">Discard</string>

    <string name="puzzle">Puzzle</string>
    <string name="new_puzzle">New Puzzle</string>
    <string name="difficulty">Difficulty</string>
    <string name="reset">Reset</string>
    <string name="restart">Restart</string>
    <string name="resume">Resume</string>
    <string name="validate">Validate</string>

    <string name="msg_no_related_launcher">No related launcher has been found.</string>
    <string name="msg_no_external_storage">No external storage has been found.</string>
    <string name="msg_wrong_format">The format cannot be identified.</string>
    <string name="msg_empty_puzzle_storage">It is an empty puzzle storage, You can trigger a new puzzle or import puzzle
        file.
    </string>
    <string name="msg_discard">Do you want to discard them completely?</string>
    <string name="msg_completed">Well done, you have completed the the puzzle.</string>
    <string name="msg_new_puzzle">You can find and resume previous puzzle in the storage.</string>
    <string name="msg_restart">Do you want to erase current progress?</string>
    <string name="msg_reset">Do you want to reset to the default configuration?</string>

    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="nightmare">Nightmare</string>
    <string name="hell">Hell</string>

</resources>
