<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yang="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gmail.jiangyang5157.sudoku.component.view.BaseFrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        yang:square="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.gmail.jiangyang5157.sudoku.component.view.IconButton
                android:id="@+id/ib_resume"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                yang:icon_bg="@color/theme_light_blue"
                yang:icon_center="@drawable/ic_restore_white_24px"
                yang:text="@string/resume" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.gmail.jiangyang5157.sudoku.component.view.IconButton
                        android:id="@+id/ib_level_easy"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        yang:icon_bg="@color/theme_light_blue"
                        yang:icon_center="@drawable/ic_label_outline_white_24px"
                        yang:text="@string/easy" />

                    <com.gmail.jiangyang5157.sudoku.component.view.IconButton
                        android:id="@+id/ib_level_normal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        yang:icon_bg="@color/theme_light_blue"
                        yang:icon_center="@drawable/ic_label_outline_white_24px"
                        yang:text="@string/normal" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.gmail.jiangyang5157.sudoku.component.view.IconButton
                        android:id="@+id/ib_level_nightmare"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        yang:icon_bg="@color/theme_light_blue"
                        yang:icon_center="@drawable/ic_label_outline_white_24px"
                        yang:text="@string/nightmare" />

                    <com.gmail.jiangyang5157.sudoku.component.view.IconButton
                        android:id="@+id/ib_level_hell"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        yang:icon_bg="@color/theme_light_blue"
                        yang:icon_center="@drawable/ic_label_outline_white_24px"
                        yang:text="@string/hell" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </com.gmail.jiangyang5157.sudoku.component.view.BaseFrameLayout>
</RelativeLayout>
